Fix sort icon wrapping onto newline issue.

--- a/sass/aha-table-sketch.scss
+++ b/sass/aha-table-sketch.scss
@@ -114,7 +114,7 @@ th {
 }
 
 .column-head {
-  white-space: pre-wrap;
+  white-space: pre-line;
 }
 
 label {
